--- a/tmux.conf
+++ b/tmux.conf
@@ -53,17 +53,23 @@ bind C-a send-prefix
 # start copy mode when scrolling up (weird with vim mouse, so leave off)
 # bind -n WheelUpPane copy-mode
 
-# select with 'v' as in Vim
-bind -t vi-copy v begin-selection           # emulate visual 
-bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
+## select with 'v' as in Vim
+# bind -t vi-copy v begin-selection           # emulate visual 
+# bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
+## As of v2.4, use these lines:
+bind -T copy-mode-vi v send-keys -X begin-selection        # emulate visual 
+bind -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle   # emulate visual block 
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
-unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# NOTE: These lines don't copy to Mac clipboard:
-# bind -t vi-copy Enter copy-selection
-# bind -t vi-copy y copy-selection
+# unbind -t vi-copy Enter
+# bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+## As of v2.4, use these lines: https://github.com/tmux/tmux/issues/909
+unbind -T copy-mode-vi Enter
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
+    \; display-message "copied to system clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
+    \; display-message "copied to system clipboard"
 
 # paste
 unbind C-p
@@ -124,6 +130,7 @@ set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh)'
 #------------------------------------------------------------------------------
 #       Colors
 #------------------------------------------------------------------------------
+# NOTE these are overwritten by tmux-colors-solarized below.
 # color status bar
 set -g status-bg colour235  # dark grey
 set -g status-fg white
