--- a/tmux.conf
+++ b/tmux.conf
@@ -66,10 +66,8 @@ bind -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle   # emulate visual bloc
 # bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 ## As of v2.4, use these lines: https://github.com/tmux/tmux/issues/909
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
-    \; display-message "copied to system clipboard"
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy' \
-    \; display-message "copied to system clipboard"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # paste
 unbind C-p
