Minor tweaks to config files.
Former-commit-id: 21102be7dfe1d11aa9c42c4ced4acbc5e941298b [formerly 249e5eabee98be5f6de9f5c3c3175785cf9a8de9] [formerly 486dd51a9f0f64e1a2678243378ffea29ca365b3 [formerly e6e0c132d354a71f89a80d59027bf0018111ce14]]
Former-commit-id: d26b396cedb95d9e0483477d013dc0e575b2636f [formerly a36ede2847365e0b042e115ecf70d68e9483fa4b]
Former-commit-id: fa132d94010bdcbb00ec40b95dab2697ae6c15fb

--- a/tmux.conf
+++ b/tmux.conf
@@ -123,7 +123,7 @@ set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[d
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
-set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh)'
+set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) '
 
 #------------------------------------------------------------------------------
 #       Colors
@@ -155,7 +155,7 @@ set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized 'dark'
+set -g @colors-solarized '256'
 
 # tmux resurrect
 set -g @resurrect-capture-pane-contents 'on'
