Tweaks to files
    -- Update latex settings in vimrc and after/ftplugin/tex.vim
    -- add ORPC env variable in bash_profile
    -- change colors in muttrc and tmux.conf
    -- add redraw after vim grep operator


Former-commit-id: 6a2fc54738d07549000be59959476d22e3baf2b9 [formerly 772728aa87a07f3d6be0d384693de0d5bc87b895] [formerly 272863e429f97029d952ba5d7c060552336cf9d7 [formerly dcf48001a07e576449c8ec5ffeed1ae77782b325]]
Former-commit-id: f197e9ed7e92a466d78fc2fffdfce56509a1d308 [formerly 2d16230cb4d5cfc13560b2c014fab9648afcef4c]
Former-commit-id: f0517ce9db383fc788d3a099f20dae71e10a4df2

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,7 @@ set -g visual-bell off
 
 # Ensure correct bash is used
 set -g default-shell $SHELL
+# <https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard>
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------------------------------------------------------------------------------
@@ -53,21 +54,32 @@ bind C-a send-prefix
 # start copy mode when scrolling up (weird with vim mouse, so leave off)
 # bind -n WheelUpPane copy-mode
 
-## select with 'v' as in Vim
+## Pre-v2.4 select with 'v' as in Vim
 # bind -t vi-copy v begin-selection           # emulate visual 
 # bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
-## As of v2.4, use these lines:
-bind -T copy-mode-vi v send-keys -X begin-selection        # emulate visual 
-bind -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle   # emulate visual block 
 
-# copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
+## As of v2.4, use these lines:
+bind -T copy-mode-vi v      send-keys -X begin-selection  # emulate visual
+bind -T copy-mode-vi 'C-v'  send-keys -X rectangle-toggle # emulate visual block
+bind -T copy-mode-vi Escape send-keys -X cancel           # exit without copying
+
+## copy with 'enter' or 'y' and send to mac os clipboard: <http://goo.gl/2Bfn8>
+## Use these lines prior to v2.4:
 # unbind -t vi-copy Enter
 # bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-## As of v2.4, use these lines: https://github.com/tmux/tmux/issues/909
+
+## As of v2.4, use these lines: <https://github.com/tmux/tmux/issues/909>
+## NOTE "-and-cancel" jumps cursor back to prompt after copying
 unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+
+## As of v2.6, don't need reattach-to-user-namespace anymore?
+## <https://github.com/tmux/tmux/issues/592> "jayniz" comment
+## False. These lines do not allow copying to MacOS clipboard
+# bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
+# bind -T copy-mode-vi y     send-keys -X copy-selection-and-cancel
 
 # paste
 unbind C-p
