Tweak ipython prompt. Minor vim tweaks.
Former-commit-id: 73129a93dd2027074ea991b7fc847ab656142092 [formerly 8ce4563464b5a32ec42327b0a9ea0cb4ea9c75d2] [formerly 9d684889679ed2eeba7cecd7b2935c64c68b31c8 [formerly 4ad8e89bdff05c21eb1721e0d0e6802c21424521]]
Former-commit-id: 5a57ac57a9ccd5f4d2dfb30bdd48c2a83173e90a [formerly a152f28757016f9f5106b0c65c19ca8c65de848e]
Former-commit-id: 06ac18658747e5c6953c5ba0652641f470b8795f

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/bundle/vimtex"]
 	path = vim/bundle/vimtex
 	url = https://github.com/lervag/vimtex.git
+[submodule "vim/bundle/vim-abolish"]
+	path = vim/bundle/vim-abolish
+	url = https://github.com/tpope/vim-abolish.git
