Add jedi-vim submodule.
Former-commit-id: dbbea1174e8c319c76ab1313c88a5e4d0978396b [formerly fd871a9182784a01ab3d03b27984cca82fd1c099] [formerly 037caa1b794f90c47f771248ded936a058c6cf7c [formerly e9dd8316a852ef2072edd98809b60deac930ad65]]
Former-commit-id: 13e51f247c30da4fc9d6481accde5359886a9cd3 [formerly 79b00d26c0e172a3787137e2d24da326fdf310e7]
Former-commit-id: 3cee1e82d5b1000872a669d315d48581fbdfa94a

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/bundle/vim-ipython"]
 	path = vim/bundle/vim-ipython
 	url = https://github.com/broesler/vim-ipython.git
+[submodule "vim/bundle/jedi-vim"]
+	path = vim/bundle/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim.git
