Move vim-ipython -> jupyter-vim
Former-commit-id: 177a2c194eb564c40be19a682800517fedf8bced [formerly 5f44004dbdf70bb238ad342daa4a112c93e77546] [formerly 89ab9faa7d1dde9b4383a0265ab5f7c71ff6c9a2 [formerly ded4c099c3e920e2626b885115c16d46c213b977]]
Former-commit-id: fd30e6564797abb467d161ba35ffde41bb70690b [formerly d7ecaa92f172911cbe6862f9c95453fad4671e68]
Former-commit-id: 28ef41514853af17fb26ddfc876b6ab33649accc

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,11 +38,8 @@
 	path = vim/bundle/vim-abolish
 	url = https://github.com/tpope/vim-abolish.git
 [submodule "vim/bundle/vim-ipython"]
-	path = vim/bundle/vim-ipython
+	path = vim/bundle/jupyter-vim
 	url = https://github.com/broesler/vim-ipython.git
 [submodule "vim/bundle/jedi-vim"]
 	path = vim/bundle/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim.git
-[submodule "vim/bundle/vim-jupyter"]
-	path = vim/bundle/vim-jupyter
-	url = git@bitbucket.org:broesler/vim-jupyter.git
