Incorporate base16 colors into vim and shell.
    -- base16 not great in general... strings are green, imports are
    purple, and numbers are orange/red which throws me off a bit.
    -- base16_ocean might be best, or default-dark


Former-commit-id: b8ed7e5cc85276c76470d976a30591711d125d27 [formerly cdc10e0a26ccbd040341893b9db99b79596d4593] [formerly 07f03649b9750a8caf86f06e272832a0433e3abe [formerly c970a2b4e562b537ddbe0f4aa5dd29c27d8335df]]
Former-commit-id: 782be14f62c5972969b18c9374ef58cf790ce64a [formerly eeae6c976f7f1143170fae2caa4358e6e04455e8]
Former-commit-id: 36a360f3d163eb8b438afbd8a05a7a64e08a89f5

--- a/tmux.conf
+++ b/tmux.conf
@@ -167,7 +167,7 @@ set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized '256'
+set -g @colors-solarized 'dark'
 
 # tmux resurrect
 set -g @resurrect-capture-pane-contents 'on'
