--- a/tmux.conf
+++ b/tmux.conf
@@ -167,7 +167,7 @@ set -g @plugin '~/.tmux/plugins/tpm/'
 set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
 
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized 'dark'
+set -g @colors-solarized '256'
 
 # tmux resurrect
 set -g @resurrect-capture-pane-contents 'on'
