Clone to Windows PC.
Former-commit-id: 77124ba4c6e55d14ab7836ac7f238221efe7a4af [formerly e23c6c9d9a3d66eeef4957967180e1bc49ec549b] [formerly 1fb6fc0c74ca605d6071e75b4e5278edf7b05938 [formerly e5a0e343a766081ade3818bb21cdc34abe81b241]]
Former-commit-id: 3a08a195bd5885c3cf6ee0740ca74b559f75018f [formerly 8a8401ff84d9e72434f2e79b9d09abd946521a8a]
Former-commit-id: 0dc6ecaff9401f88fe4030398ddd5ff3b41336f6

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = git://github.com/tpope/vim-unimpaired.git
 [submodule "vim/bundle/breptile"]
 	path = vim/bundle/breptile
-	url = git@bitbucket.org:broesler/breptile.git
+	url = https://github.com/broesler/breptile.git
 [submodule "vim/bundle/ack.vim"]
 	path = vim/bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
