Update .gitmodules to add tmux submodules.
Former-commit-id: d3536a0e31a9fa6673469ef735b33a23a8dcd291 [formerly a6a487e2835ab0a56d505b750b0c98c84c5e9bac] [formerly f7f252cfa7c4c75855a9d0fda89b4f08a9cbf719 [formerly de29834cda159f30da2a294a3ff6ff3323f041fa]]
Former-commit-id: e23f4372796fd4afc556f0fc9af8841299f0cf00 [formerly d7dd8f486ce2a1b6c948d555fe54025c1f69e62f]
Former-commit-id: 7582096e0388ac9d95551d62a7b8ab3ced0626f3

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,12 @@
 [submodule "vim/bundle/vim-flake8"]
 	path = vim/bundle/vim-flake8
 	url = https://github.com/nvie/vim-flake8.git
+[submodule "tmux/plugins/tmux-colors-solarized"]
+    path = tmux/plugins/tmux-colors-solarized
+    url = https://github.com/seebi/tmux-colors-solarized.git
+[submodule "tmux/plugins/tmux-resurrect"]
+    path = tmux/plugins/tmux-resurrect
+    url = https://github.com/tmux-plugins/tmux-resurrect.git
+[submodule "tmux/plugins/tpm"]
+    path = tmux/plugins/tpm
+    url = https://github.com/tmux-plugins/tpm.git
