Add rust.vim submodule.
Former-commit-id: 95f06444f68bf37b5eba0d80759b6d5011365fd9
Former-commit-id: c3e03cc9a3aa03d5deafbeb662d71a324e6c3161 [formerly 1b74543668c20dfeef29d02f1c42b34a0e1943e0]
Former-commit-id: 557e3ab253df44e87ecf93fa3c263408025262b6

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "tmux/plugins/tpm"]
     path = tmux/plugins/tpm
     url = https://github.com/tmux-plugins/tpm.git
+[submodule "vim/bundle/rust.vim"]
+	path = vim/bundle/rust.vim
+	url = https://github.com/rust-lang/rust.vim.git
