Remove tmux plugin manager dependencies.
Former-commit-id: e7ccb0cc7a05b5ecc736370146a4ba899a1c81b4 [formerly b4becd9515a3d66ed817758f97694426be5a37a7] [formerly a818e3995c854ea32c1b25d96bf01ee63f3b4bc6 [formerly 65185bafeb6d987bc104f549785ed5c612564403]]
Former-commit-id: 6f1008105bb098a943c8d35d5ab83bb3df1b9399 [formerly 68ca03521469bce30d8e77532151640e04b44e7e]
Former-commit-id: ea60a9418d3e7d2a9559ce06817b859037ef7fed

--- a/tmux.conf
+++ b/tmux.conf
@@ -149,19 +149,14 @@ set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) 
 #------------------------------------------------------------------------------
 #       Run plugins
 #------------------------------------------------------------------------------
-# tmux plugin manager
-set -g @plugin '~/.tmux/plugins/tpm/'
-set -g @plugin '~/.tmux/plugins/tmux-colors-solarized/'
-
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized '256'
+set -g @colors-solarized 'dark'
+run-shell ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors.tmux
 
 # tmux resurrect
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-bash-history 'on'
-
 run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
-run '~/.tmux/plugins/tpm/tpm'
 
 #==============================================================================
 #==============================================================================
