Remove reattach-to-user-namespace calls in Windows.

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,8 +40,10 @@ set -g visual-bell off
 
 # Ensure correct bash is used
 set -g default-shell $SHELL
+
+# NOTE this line breaks in Windows:
 # <https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard>
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------------------------------------------------------------------------------
 #       Key Bindings
@@ -72,8 +74,11 @@ bind -T copy-mode-vi Escape send-keys -X cancel           # exit without copying
 ## As of v2.4, use these lines: <https://github.com/tmux/tmux/issues/909>
 ## NOTE "-and-cancel" jumps cursor back to prompt after copying
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+## NOTE reattach-to-user-namespace breaks in Windows
+# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+# bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi Enter send-keys -X copy-selection
+bind -T copy-mode-vi y     send-keys -X copy-selection
 
 ## As of v2.6, don't need reattach-to-user-namespace anymore?
 ## <https://github.com/tmux/tmux/issues/592> "jayniz" comment
