--- a/tmux.conf
+++ b/tmux.conf
@@ -158,6 +158,9 @@ set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) 
 set -g @colors-solarized '256'
 run-shell ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors.tmux
 
+# tmux yank
+run-shell ~/.tmux/plugins/tmux-yank/yank.tmux
+
 # tmux resurrect
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-save-bash-history 'on'
