--- a/.gitmodules
+++ b/.gitmodules
@@ -35,7 +35,7 @@
 	path = vim/bundle/vimtex
 	url = https://github.com/lervag/vimtex.git
 [submodule "vim/bundle/vim-abolish"]
-	path = vim/bundle/vim-abolish
+	path = vim/bundle/abolish
 	url = https://github.com/tpope/vim-abolish.git
 [submodule "vim/bundle/vim-ipython"]
 	path = vim/bundle/jupyter-vim
@@ -52,3 +52,6 @@
 [submodule "tmux/plugins/tmux-resurrect"]
     path = tmux/plugins/tmux-resurrect
     url = https://github.com/tmux-plugins/tmux-resurrect.git
+[submodule "vim/bundle/vim-scriptease"]
+	path = vim/bundle/scriptease
+	url = https://github.com/tpope/vim-scriptease.git
