Remove vim- from submodule names.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,8 +34,8 @@
 [submodule "vim/bundle/vimtex"]
 	path = vim/bundle/vimtex
 	url = https://github.com/lervag/vimtex.git
-[submodule "vim/bundle/vim-abolish"]
-	path = vim/bundle/vim-abolish
+[submodule "vim/bundle/abolish"]
+	path = vim/bundle/abolish
 	url = https://github.com/tpope/vim-abolish.git
 [submodule "vim/bundle/vim-ipython"]
 	path = vim/bundle/jupyter-vim
@@ -43,8 +43,8 @@
 [submodule "vim/bundle/jedi-vim"]
 	path = vim/bundle/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim.git
-[submodule "vim/bundle/vim-flake8"]
-	path = vim/bundle/vim-flake8
+[submodule "vim/bundle/flake8"]
+	path = vim/bundle/flake8
 	url = https://github.com/nvie/vim-flake8.git
 [submodule "tmux/plugins/tmux-colors-solarized"]
     path = tmux/plugins/tmux-colors-solarized
