Add MouseDragEnd1Pane mapping to copy on mouse selection.

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,6 @@
 
 # use 256 term for pretty colors, screen typically works better than xterm
 set -g default-terminal "screen-256color"
-# set -g default-terminal "xterm-256color"
 
 # *** setw is short for set-window-option ***
 set  -g  history-file ~/.tmux_history # save command history to file
@@ -41,10 +40,6 @@ set -g visual-bell off
 # Ensure correct bash is used
 set -g default-shell $SHELL
 
-# NOTE this line breaks in Windows:
-# <https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard>
-# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
 #------------------------------------------------------------------------------
 #       Key Bindings
 #------------------------------------------------------------------------------
@@ -56,35 +51,17 @@ bind C-a send-prefix
 # start copy mode when scrolling up (weird with vim mouse, so leave off)
 # bind -n WheelUpPane copy-mode
 
-## Pre-v2.4 select with 'v' as in Vim
-# bind -t vi-copy v begin-selection           # emulate visual 
-# bind -t vi-copy 'C-v' rectangle-toggle      # emulate visual block 
-
 ## As of v2.4, use these lines:
 bind -T copy-mode-vi v      send-keys -X begin-selection  # emulate visual
 bind -T copy-mode-vi 'C-v'  send-keys -X rectangle-toggle # emulate visual block
 bind -T copy-mode-vi Escape send-keys -X cancel           # exit without copying
 
-## copy with 'enter' or 'y' and send to mac os clipboard: <http://goo.gl/2Bfn8>
-## Use these lines prior to v2.4:
-# unbind -t vi-copy Enter
-# bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 ## As of v2.4, use these lines: <https://github.com/tmux/tmux/issues/909>
 ## NOTE "-and-cancel" jumps cursor back to prompt after copying
 unbind -T copy-mode-vi Enter
-## NOTE reattach-to-user-namespace breaks in Windows
-# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-# bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-bind -T copy-mode-vi Enter send-keys -X copy-selection
-bind -T copy-mode-vi y     send-keys -X copy-selection
-
-## As of v2.6, don't need reattach-to-user-namespace anymore?
-## <https://github.com/tmux/tmux/issues/592> "jayniz" comment
-## False. These lines do not allow copying to MacOS clipboard
-# bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
-# bind -T copy-mode-vi y     send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi Enter             send-keys -X copy-selection
+bind -T copy-mode-vi y                 send-keys -X copy-selection
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection
 
 # paste
 unbind C-p
@@ -115,8 +92,8 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l'
 
 # force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+unbind R
+bind R source-file ~/.tmux.conf \; display "Reloaded!"
 
 #------------------------------------------------------------------------------
 #       Status Bar
@@ -140,7 +117,8 @@ set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[d
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
-set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) '
+# set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) '
+set-option -g status-right '%m/%d/%y %R '
 
 #------------------------------------------------------------------------------
 #       Colors
