Add copy on mouse-drag.

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,8 +72,9 @@ bind -T copy-mode-vi Escape send-keys -X cancel           # exit without copying
 ## As of v2.4, use these lines: <https://github.com/tmux/tmux/issues/909>
 ## NOTE "-and-cancel" jumps cursor back to prompt after copying
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-bind -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi y                 send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 ## As of v2.6, don't need reattach-to-user-namespace anymore?
 ## <https://github.com/tmux/tmux/issues/592> "jayniz" comment
