--- a/tmux.conf
+++ b/tmux.conf
@@ -151,7 +151,7 @@ set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) 
 #       Run plugins
 #------------------------------------------------------------------------------
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized 'light'
+set -g @colors-solarized '256'
 run-shell ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors.tmux
 
 # tmux resurrect
