Add tmux option allow-passthrough for iTerm profile switching.

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ set  -g  repeat-time 1000        # increase repeat time for repeatable commands
 set  -g  base-index 0            # start window index at 1
 setw -g  pane-base-index 0       # start pane index at 1
 set  -g  renumber-windows on     # re-number windows when one is closed
+set  -g  allow-passthrough on    # allow escape sequences to be used
 
 # Allow tmux to change title of terminal emulator (i.e. Terminal.app)
 set -g set-titles on
