Update for X13 laptop.

--- a/tmux.conf
+++ b/tmux.conf
@@ -133,7 +133,7 @@ set-option -g status-right '%m/%d/%y %R '
 #       Run plugins
 #------------------------------------------------------------------------------
 # Solarized colorscheme '256', 'dark', 'light'
-set -g @colors-solarized 'light'
+set -g @colors-solarized 'dark'
 run-shell ~/.tmux/plugins/tmux-colors-solarized/tmuxcolors.tmux
 
 # tmux yank
