Add tmux bindings for rotating 2 windows.

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,6 +91,13 @@ bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # Use prefix + C-l to redraw screen
 bind C-l send-keys 'C-l'
 
+# Reorganize panes
+# <https://stackoverflow.com/questions/15439294/tmux-switch-the-split-style-of-two-adjacent-panes>
+bind -n M-h move-pane    -t '.{left-of}'   # rotate CW with pane to left
+bind -n M-j move-pane -h -t '.{down-of}'   # rotate CW with pane below
+bind -n M-k move-pane -h -t '.{up-of}'     # rotate CCW with pane above
+bind -n M-l move-pane    -t '.{right-of}'  # rotate CCW with pane to right
+
 # force a reload of the config file
 unbind R
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
