Update tmux files for new MBP.

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,7 @@ set -g visual-bell off
 # Ensure correct bash is used
 set -g default-shell $SHELL
 # <https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard>
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 #------------------------------------------------------------------------------
 #       Key Bindings
