Correct italics in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@
 #==============================================================================
 
 # use 256 term for pretty colors, screen typically works better than xterm
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 # set -g default-terminal "xterm-256color"
 
 # *** setw is short for set-window-option ***
