--- a/tmux.conf
+++ b/tmux.conf
@@ -137,7 +137,7 @@ set -g status-left '#[fg=green]#S#[fg=default] #{session_id}:#{window_id}.#D #[d
 
 # show hostname, date, time and battery, in right status bar
 # set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %R'
-set-option -g status-right '%m/%d/%y %R | #[fg=green]#(/usr/local/bin/power.sh) '
+set-option -g status-right '%m/%d/%y %R | #[fg=green]#(pmset -g batt | grep -o "[0-9]\{1,3\}%%") '
 
 #------------------------------------------------------------------------------
 #       Colors
