--- a/tmux.conf
+++ b/tmux.conf
@@ -83,6 +83,10 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'reatta
 # bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
 # bind -T copy-mode-vi y     send-keys -X copy-selection-and-cancel
 
+# Jump to previous/next prompt for easy scrollback
+bind -T copy-mode-vi p send-keys -X previous-prompt
+bind -T copy-mode-vi P send-keys -X next-prompt
+
 # paste
 unbind C-p
 bind C-p paste-buffer
