--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/pack/all/start/ale"]
 	path = vim/pack/all/start/ale
 	url = https://github.com/dense-analysis/ale.git
+[submodule "vim/pack/all/start/fzf-vim"]
+	path = vim/pack/all/start/fzf-vim
+	url = https://github.com/junegunn/fzf.vim.git
