--- a/config/ruff/ruff.toml
+++ b/config/ruff/ruff.toml
@@ -7,7 +7,7 @@ extend-select = [
     'D',    # docstring errors
     'E',    # pycodestyle errors
     'F',    # pyflakes errors
-    # 'I',  # isort errors (import sorting)
+    'I',  # isort errors (import sorting)
     'ISC',  # flake8-implicit-str-concat
     'NPY',  # numpy-specific checks
     'PD',   # pandas-vet
@@ -26,7 +26,6 @@ ignore = [
     'D105',     # Missing docstring in magic method
     'D205',     # 1 blank line required between summary line and description
     'E741',     # ambiguous variable name (l, O, I)
-    'PD901',    # Avoid using the generic variable name `df` for DataFrames
     'PIE790',   # Unnecessary `pass` statement
     'PLC2401',  # non-ASCII characters
     'PLR0912',  # too many branches (max-branches)
@@ -38,6 +37,7 @@ ignore = [
 [lint.per-file-ignores]
 "__init__.py" = ['F403', 'F405']  # ignore wildcard imports and undefined names
 "test_*.py" = ['D101', 'D102', 'D103']  # ignore docstring checks in test files
+"setup.py" = ['D100', 'D101', 'D102', 'D103', 'D104']  # ignore docstrings
 
 [lint.pydocstyle]
 convention = "numpy"
