--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Local .gitignore for my .dotfiles
 vim/view/*
 vim/undodir/*
-vim/tmp/undo/*
+vim/tmp/*
 mutt/cache/*
 mutt/tmp/*
 *yankring_history*
@@ -13,5 +13,4 @@ history.sqlite
 dbhist
 ipython/profile_default/db/
 matplotlib/fontList.json
-
 matplotlib/*fontlist*
